# gene-rally-with-guns

./: Cargo.toml  ex.sh
assets/sounds/: LICENSE.txt
docs/: game-design.md
src/: arena.rs  audio.rs  bot.rs  camera.rs  cop.rs  input.rs  lobby.rs  main.rs  menu.rs  nav.rs  pedestrian.rs  pickup.rs  round.rs  skidmark.rs  vehicle.rs  weapon.rs
