[package]
name = "gene_rally_with_guns"
version = "0.1.0"
edition = "2024"

# Pinned compatible set (see docs/game-design.md §9):
# bevy 0.19.0 + avian3d 0.7.0 + leafwing-input-manager 0.21.0
# Upgrade deliberately, all together — not casually.
[dependencies]
bevy = "=0.19.0"
avian3d = "=0.7.0"
leafwing-input-manager = "=0.21.0"

# Fast iteration: light opt for our code, full opt for deps (Bevy is unusably
# slow fully unoptimized), keep debug info off deps to speed linking.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
lto = "thin"
